Fixed Dark Mode and Rewrote README

--- a/_res/styles/rb-engine.css
+++ b/_res/styles/rb-engine.css
@@ -1,6 +1,7 @@
 /*
     RB-Engine
 */
+
 /*! START - normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}details,main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}[hidden],template{display:none}
 /*! END   - normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -193,8 +194,9 @@ hr {    /* Default, No Shadow/Depth HR Border */
     line-height: 1.6em;
     border-top: 1px solid #ddd;
     padding-top: 12px;
-    padding-bottom: 16px;
+    padding-bottom: 12px;
     margin: 0 16px 0;
+    display: flex;
 }
 
 .rb-card-footer-comment_separator {
@@ -202,8 +204,7 @@ hr {    /* Default, No Shadow/Depth HR Border */
 }
 
 .rb-card-footer-tags {
-    margin-top: 0;
-    margin-left: 0;
+    margin: 0;
 }
 
 .rb-card-footer-tags-table {
@@ -274,12 +275,13 @@ hr {    /* Default, No Shadow/Depth HR Border */
 }
 
 .rb-list-item {
-    display: grid !important;
+    /*display: grid !important;*/
     grid-template-columns: 3.125rem auto;
     grid-template-rows: auto;
     text-align: left !important;
     margin: 0rem !important;
     padding: 1rem !important;
+    width: 100%;
 }
 
 .rb-list-item > img {
@@ -433,6 +435,7 @@ hr {    /* Default, No Shadow/Depth HR Border */
 .rb-text-font-large {
     font-size: 1.125rem !important;
     line-height: 1.5rem;
+    white-space: normal;
 }
 
 .rb-padding-1rem-2rem {
